test/sema/typeck/trait/super-trait-cycle-where.out
error: cycle in type hierarchy detected.
--> super-trait-cycle-where.dora:2:21
 | trait A where Self: B {}
 | trait B where Self: A {}
                       ~
 | 
1 error found.
