test/sema/typeck/trait/super-trait-cycle-where.dora
trait A where Self: B {}
trait B where Self: A {}
